<resources>
    <string name="app_name">Meteorito</string>
    <string name="google_maps_api_key">AIzaSyDJoWr3OZN_e3UuZZn2Xo1oDPDhoAA76fk</string>
    <string name="iw_title">Meteorite Landing</string>
    <string name="location_title">Location</string>
    <string name="location_country">Country:</string>
    <string name="location_region">Region:</string>
    <string name="location_unknown">unknown</string>
    <string name="list_meteorite_landings_count">The number of meteorite landings since 2011</string>
    <string name="iw_name">Name:</string>
    <string name="iw_name_type">Name type:</string>
    <string name="iw_year">Year:</string>
    <string name="iw_mass">Mass:</string>
    <string name="iw_fall">Fall:</string>
    <string name="iw_class">Class:</string>
    <string name="empty_list_text">No meteorite landings</string>
    <string name="menu_about">About</string>
    <string name="menu_legend">Legend</string>
    <string name="dialog_close">Close</string>
    <string name="about_text">Meteorito is an Android application for displaying data on meteorites that have landed on Earth since 2011.</string>
    <string name="about_credits">Icons were used/derived from www.flatpick.com created by www.freepik.com</string>
    <string name="about_copyright">Copyright \u00a9 2017 Róbert Ďuriančík</string>
    <string name="legend_mass">Mass in grams</string>
    <string name="legend_class">Meteorite classification</string>
    <string name="legend_type">\'Valid\' is for most meteorites and \'Relict\' are for objects that were once meteorites but are now highly altered by weathering on Earth</string>
    <string name="description_mass_in_grams">Mass in grams icon</string>
    <string name="description_meteorite_classification">Meteorite classification icon</string>
</resources>
