<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.robertduriancik.meteorito.fragments.MapFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        map:cameraZoom="15"
        map:mapType="normal" />

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:text="@string/location_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/location_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_title"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                tools:text="coords" />

            <TextView
                android:id="@+id/location_country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/location_coordinates"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/location_country" />

            <TextView
                android:id="@+id/location_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/location_country_label"
                android:layout_toEndOf="@+id/location_country_label"
                android:layout_toRightOf="@+id/location_country_label"
                tools:text="Country" />

            <TextView
                android:id="@+id/location_region_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/location_region"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@+id/location_region"
                android:layout_toStartOf="@+id/location_region"
                android:text="@string/location_region" />

            <TextView
                android:id="@+id/location_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/location_coordinates"
                tools:text="region" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
